finishing up initial upload.